# uqt

./: CMakeLists.txt  LICENSE  README.md  display.cpp  display.h  uqt.h
include/: uqt_global.h
include/QtSingleApplication/: qtlockedfile.h
include/uqt/Filesystem/: Browse.h
include/uqt/QtSingleApplication/: qtlocalpeer.h  qtlockedfile.h  qtsingleapplication.h
include/uqt/String/: TitleLimitation.h
lib/: CMakeLists.txt
lib/Filesystem/: Browse.cpp
lib/QtSingleApplication/: qtlocalpeer.cpp  qtlockedfile.cpp  qtlockedfile_unix.cpp  qtlockedfile_win.cpp
lib/String/: TitleLimitation.cpp
